Add watering schedule API
